--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,7 @@
           Y este es el párrafo de inicio donde vamos a explicar las cosas
           increíbles que se pueden hacer con ramas
         </p>
+        <p style="text-align: center;"><img src="imagenes/Air Force.png" alt="Prueba" height="100%" style=""></p>
         <p>
           Los blogs son la mejor forma de compartir información y tus ideas.
           Mucho más que ir a conferencias o salir en YouTube. Excepto si eres un
